--- a/Config/DefaultGame.ini
+++ b/Config/DefaultGame.ini
@@ -26,6 +26,9 @@ bCookMapsOnly=False
 bCompressed=True
 bEncryptIniFiles=False
 bSkipEditorContent=False
--MapsToCook=(FilePath=)
+-MapsToCook=(FilePath="/Game/GameLevel")
 +MapsToCook=(FilePath="/Game/GameLevel")
+-DirectoriesToAlwaysCook=(Path=)
++DirectoriesToAlwaysCook=(Path="Texture")
+
 
