add icons textures, improve game main data display, test chartboost cache feature

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -98,3 +98,5 @@ bPackageDataInsideApk=True
 AppIDAndroid=5882227004b01608a35773b8
 SignatureAndroid=ac7a93aff419943fc56eeb78f7b85feadcbed9ec
 
+[/Script/Engine.Engine]
+bPauseOnLossOfFocus=False
