--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -108,18 +108,28 @@ RewardedVdeoId=testing123
 AppId=5889d0a773d62dfe6e00058b
 ZoneId=5889d0a773d62dfe6e00058b
 
+[/Script/Chartboost.ChartboostSettings]
+AppId=5882227004b01608a35773b8
+AppSignature=ac7a93aff419943fc56eeb78f7b85feadcbed9ec
+
+[OnlineSubsystem]
+DefaultPlatformService=GooglePlay
+
+[OnlineSubsystemGooglePlay.Store]
+bSupportsInAppPurchasing=True
+
 [/Script/AndroidRuntimeSettings.AndroidRuntimeSettings]
-PackageName=com.SlackStudio.NakJadiPM
+PackageName=com.slackstudio.nakjadipm
 StoreVersion=1
-ApplicationDisplayName=
-VersionDisplayName=1.0
+ApplicationDisplayName=nakjadipm
+VersionDisplayName=0.0
 MinSDKVersion=19
 TargetSDKVersion=19
 InstallLocation=InternalOnly
 bPackageDataInsideApk=True
 bCreateAllPlatformsInstall=False
 bDisableVerifyOBBOnStartUp=False
-Orientation=SensorPortrait
+Orientation=Portrait
 AntVerbosity=Quiet
 bFullScreen=True
 DepthBufferPreference=Default
@@ -130,6 +140,7 @@ ExtraActivitySettings=
 -ExtraPermissions=android.permission.WRITE_EXTERNAL_STORAGE
 -ExtraPermissions=android.permission.ACCESS_WIFI_STATE
 -ExtraPermissions=android.permission.READ_PHONE_STATE
+-ExtraPermissions=
 -ExtraPermissions=android.permission.INTERNET
 +ExtraPermissions=com.android.vending.BILLING
 +ExtraPermissions=android.permission.READ_EXTERNAL_STORAGE
@@ -137,15 +148,14 @@ ExtraActivitySettings=
 +ExtraPermissions=android.permission.ACCESS_WIFI_STATE
 +ExtraPermissions=android.permission.READ_PHONE_STATE
 +ExtraPermissions=android.permission.INTERNET
-+ExtraPermissions=
 bPackageForGearVR=False
 bRemoveOSIG=False
 bPackageForDaydream=False
 GoogleVRMode=DaydreamAndCardboard
 bGoogleVRSustainedPerformance=False
-KeyStore=
-KeyAlias=
-KeyStorePassword=
+KeyStore=nakjadipm.keystore
+KeyAlias=nakjadipm
+KeyStorePassword=najibvsanwar
 KeyPassword=
 bBuildForArmV7=True
 bBuildForArm64=False
@@ -176,6 +186,3 @@ TextureFormatPriority_PVRTC=0.800000
 TextureFormatPriority_ATC=0.500000
 TextureFormatPriority_ASTC=0.900000
 
-[/Script/Chartboost.ChartboostSettings]
-AppId=5882227004b01608a35773b8
-AppSignature=ac7a93aff419943fc56eeb78f7b85feadcbed9ec
