--- a/Config/DefaultGame.ini
+++ b/Config/DefaultGame.ini
@@ -1,11 +1,12 @@
 [/Script/EngineSettings.GeneralProjectSettings]
 ProjectID=1F0AD5E64D701683A78799B01EDA6435
+ProjectDebugTitleInfo=NSLOCTEXT("[/Script/EngineSettings]", "F20E110746A185B5CEC1A69EB275A49A", "GameDebug")
 
 [/Script/UnrealEd.ProjectPackagingSettings]
-BuildConfiguration=PPBC_DebugGame
+BuildConfiguration=PPBC_Shipping
 StagingDirectory=(Path="C:/Users/YewShong")
 FullRebuild=False
-ForDistribution=False
+ForDistribution=True
 IncludeDebugFiles=False
 bNativizeBlueprintAssets=False
 UsePakFile=True
