--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -9,7 +9,7 @@ GrabHandCursor=None
 GrabHandClosedCursor=None
 SlashedCircleCursor=None
 ApplicationScale=1.000000
-UIScaleRule=ShortestSide
+UIScaleRule=Horizontal
 CustomScalingRuleClass=None
 UIScaleCurve=(EditorCurveData=(PreInfinityExtrap=RCCE_Constant,PostInfinityExtrap=RCCE_Constant,Keys=((Time=480.000000,Value=0.444000),(Time=720.000000,Value=0.666000),(Time=1080.000000,Value=1.000000),(Time=8640.000000,Value=8.000000)),DefaultValue=340282346638528859811704183484516925440.000000),ExternalCurve=None)
 
@@ -19,7 +19,7 @@ r.MobileNumDynamicPointLights=4
 r.MobileDynamicPointLightsUseStaticBranch=True
 r.Mobile.EnableStaticAndCSMShadowReceivers=True
 r.DiscardUnusedQuality=False
-r.AllowOcclusionQueries=True
+r.AllowOcclusionQueries=False
 r.MinScreenRadiusForLights=0.030000
 r.MinScreenRadiusForDepthPrepass=0.030000
 r.MinScreenRadiusForCSMDepth=0.010000
@@ -40,7 +40,7 @@ TranslucentSortAxis=(X=0.000000,Y=-1.000000,Z=0.000000)
 r.CustomDepth=1
 r.DefaultFeature.Bloom=False
 r.DefaultFeature.AmbientOcclusion=False
-r.DefaultFeature.AmbientOcclusionStaticFraction=True
+r.DefaultFeature.AmbientOcclusionStaticFraction=False
 r.DefaultFeature.AutoExposure=False
 r.DefaultFeature.AutoExposure.Method=0
 r.DefaultFeature.MotionBlur=False
@@ -185,4 +185,3 @@ TextureFormatPriority_DXT=0.600000
 TextureFormatPriority_PVRTC=0.800000
 TextureFormatPriority_ATC=0.500000
 TextureFormatPriority_ASTC=0.900000
-
